// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test adding custom className to Container control 1`] = `
<styled.div
  className="ui-container test-classname"
  id="testid"
  key="testid"
  sizing="normal"
  style={Object {}}
>
  <p>
    Test Container
  </p>
</styled.div>
`;

exports[`Test creation of a Container control 1`] = `
<styled.div
  className="ui-container"
  id=""
  sizing="normal"
  style={Object {}}
>
  <p>
    Test Container
  </p>
</styled.div>
`;

exports[`Test creation of a Container control with an id value 1`] = `
<styled.div
  className="ui-container"
  id="testid"
  key="testid"
  sizing="normal"
  style={Object {}}
>
  <p>
    Test Container
  </p>
</styled.div>
`;

exports[`Test retrieval of Container props object 1`] = `
Object {
  "bottom": "",
  "children": null,
  "className": "",
  "contentEditable": false,
  "controlled": true,
  "direction": "right",
  "disabled": false,
  "errorMessage": "",
  "focus": false,
  "height": "",
  "id": "",
  "left": "",
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "obj": "Container",
  "padding": "",
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "theme": null,
  "title": "",
  "tooltip": "",
  "top": "",
  "visible": true,
  "width": "",
  "xcss": null,
}
`;
